# libgcf

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  conanfile.py  features.cmake  functions.cmake  test-defs.cmake  test-resources.cmake  version.cmake
assets/: generate-assets.py  image-compressed-test.json  image-compressed-zlib.json  image-mipmaps-unpadded.json  image-mipmaps.json  image-uncompressed.json  texture-compressed-test.json  texture-compressed-zlib.json  texture-mipmaps-unpadded.json  texture-mipmaps.json  texture-uncompressed.json
scripts/: features.cmake  generate-assets.py  test-defs.cmake  test-resources.cmake
src/: compress.c  image.c  io.c  memory.c  reader.c  texture.c
src/include/gcf/: api.h  color-map.h  container.h  defs.h.in  format.h  gcf.h  image.h  texture.h  version.h.in
src/include/gcf/internal/: io.h  memory.h
test/: read-ctx-init-errors.c  read-header.c  read-resource-content-unpadded.c  read-resource-content.c  read-resource-descriptor-errors.c  read-resource-descriptor.c
test/color-map/: read-mip-level-alloc-error.c  read-mip-level-compressed-deflate.c  read-mip-level-compressed-zlib.c  read-mip-level-descriptor.c  read-mip-level-read-error.c  read-mip-level-uncompressed.c  read-mip-level-wrong-compression.c
test/image/: read-mip-level-alloc-error.c  read-mip-level-compressed-deflate.c  read-mip-level-compressed-zlib.c  read-mip-level-descriptor.c  read-mip-level-read-error.c  read-mip-level-uncompressed.c  read-mip-level-wrong-compression.c
test/include/gcf/: test-defs.h.in  test.h
test/lib/: callbacks.c  context.c
test/texture/: read-mip-level-alloc-error.c  read-mip-level-compressed-deflate.c  read-mip-level-compressed-zlib.c  read-mip-level-descriptor.c  read-mip-level-read-error.c  read-mip-level-uncompressed.c  read-mip-level-wrong-compression.c
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.c
